--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,6 @@
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+#box-container {
+    width: 300px;
+    height: 400px;
+    background-color: rgb(92, 249, 238);
+    border-radius: 10px;
+}
